# modern_cpp_vulkan_project

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  README.md
source/: CMakeLists.txt  main.cpp
